--- a/hms_softforge/templates/telaHome.html
+++ b/hms_softforge/templates/telaHome.html
@@ -1,39 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="../static/css/styleHome.css">
-</head>
-    
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HMS - Home</title>
+    <link rel="stylesheet" href="../static/css/styleHome.css" />
+    <link
+      rel="shortcut icon"
+      href="../static/imagens/soft_forge_logo"
+      type="image/x-icon"
+    />
+  </head>
+
+  <body>
     <div class="header">
-        <div class="img-title">
-            <img src="../static/imagens/soft_forge_logo.png" alt="Home" width="80" height="80" class="img-home">
-            <h1 class="title-h1">Bem-vindo a Home</h1>
-        </div>
-        <div class="sair">
-            logout
-        </div>
+      <div class="img-title">
+        <img
+          src="../static/imagens/soft_forge_logo.png"
+          alt="Home"
+          width="80"
+          height="80"
+          class="img-home"
+        />
+        <h1 class="title-h1">Bem-vindo a Home!</h1>
+      </div>
+      <div class="sair">
+        <a href="{{ url_for('logout') }}">logout</a>
+      </div>
     </div>
-    <div class="head">         
+
+    <div class="head">
+      {% if current_user.cargo == 'gerente' %}
         <div class="head-card">
-           <h1>Tarefas</h1>
-           <a class="btn-a">acessar</a>
+            <h1>Tarefas</h1>
+            <a class="btn-a" href="/tarefas">acessar</a>
         </div>
         <div class="head-card">
             <h1>Reservas</h1>
-            <a class="btn-a">acessar</a>
+            <a class="btn-a" href="/reservas">acessar</a>
         </div>
         <div class="head-card">
             <h1>Funcinários</h1>
-            <a class="btn-a">acessar</a>
-        </div>          
+            <a class="btn-a" href="/funcionarios">acessar</a>
+        </div>
+        <div class="head-card">
+          <h1>Cadastrar funcionário</h1>
+          <a class="btn-a" href="/criarconta">acessar</a>
+      </div>
+
+      {% elif current_user.cargo == 'atendente' %}
+        <div class="head-card">
+            <h1>Tarefas</h1>
+            <a class="btn-a" href="/tarefas">acessar</a>
+        </div>
+        <div class="head-card">
+            <h1>Reservas</h1>
+            <a class="btn-a" href="/reservas">acessar</a>
+        </div>
+
+      {% elif current_user.cargo == 'funcionario' %}
+        <div class="head-card">
+            <h1>Tarefas</h1>
+            <a class="btn-a" href="/tarefas">acessar</a>
+        </div>
+      {% endif %}
     </div>
+
     <div class="rodape">
-        <footer> &reg; by SoftForge-2023 </footer>
+      <footer>&reg; by SoftForge-2023</footer>
     </div>
-        
-</body>
+  </body>
 </html>
