--- a/hms_softforge/static/css/styleHome.css
+++ b/hms_softforge/static/css/styleHome.css
@@ -1,36 +1,45 @@
+* {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
 body{
     /*margin: 0;
     padding: 0;*/
     box-sizing: border-box;
-    background-color: #095c5c;
+    background: radial-gradient(circle, rgba(9,92,92,1) 0%, rgba(9,69,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 
 /*caixa principal e alinhamento dos intems*/
 .head{
     /*background-color: #095c5c;*/
-    border: 1px solid red;
+    
     display: flex;
     flex-flow: row wrap; 
     justify-content: center;
     align-content: center;
     font-size: 100%;
-    font-family: cursive;
     color: #000000;
-    text-shadow: 15px 15px 15px black;
     margin-top: 5%;
     
 }
 
 .btn-a{
-    border-radius: 30px;
+    border-radius: 8px;
     color: rgb(255, 255, 255);
-    background-color: #104ca5;
-    padding: 5px;
+    background: linear-gradient(298deg, rgba(23,121,9,1) 47%, rgba(36,92,9,1) 100%, rgba(0,255,77,1) 100%);
+    padding: 8px;
+    max-width: fit-content;
 }
 
 .btn-a:hover{
     cursor: pointer;
-    box-shadow: 5px 5px 5px black;
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.39);
+    transform: translateY(-5px);
 
 }
 
@@ -42,7 +51,6 @@ body{
     padding: 30px;
     text-align: center;
     width: 300px;
-    height: 100px;
     border-radius: 5%;
     box-shadow: 10px 10px 15px rgb(0, 0, 0);
     
@@ -50,8 +58,14 @@ body{
    
 }
 
+.is-card-box{
+    display: grid;
+    grid-row-gap: 20px;  
+    justify-items: center;  
+}
+
 .header{
-    border: 1px solid red;
+    
     text-align: center;
     display: flex;
     justify-content: center;
@@ -60,35 +74,45 @@ body{
 
 .img-home{
     display: inline-block;
-    border: 1px solid red;
+    
       
 }
 
 .title-h1{
     display: inline-block;
-    border: 1px solid red;
+    
     color: white;
-    font-family: cursive;
     margin-top: -10%;
 }
 
+.card-title{
+    font-size: 34px;
+    font-weight: 500;
+
+}
+
 .img-title{
-    border: 1px solid red;
+    
     
 }
 
 .sair{
-    border: 1px solid red;
-    color: white;
+
     font-size: 20px;
-    font-family: cursive;
     display: block;
     position: absolute;
+    background-color: red;
+    border-radius: 8px;
+    padding: 8px;
     right: 4%;
 }
 
+.sair:hover {
+    transform: translateY(5px);
+}
+
 .rodape{
-    border: 1px solid red;
+    
     color: white;
     display: flex;
     justify-content: center;
